@@ -1,8 +1,8 @@
 buildscript {
     ext {
         // App version
-        versionName = '7.9.2'
-        versionCode = 120
+        versionName = '7.9.3'
+        versionCode = 121
 
         applicationId = "io.novafoundation.nova"
         releaseApplicationSuffix = "market"
@@ -258,6 +258,7 @@ task ktlintFormat(type: JavaExec, group: "formatting") {
     main = "com.pinterest.ktlint.Main"
     args "-F", "$project.rootDir/**/src/main/**/*.kt"
     args "--android"
+    jvmArgs "--add-opens=java.base/java.lang=ALL-UNNAMED"
 }
 
 task runTest(type: GradleBuild) {
